web/src/components/Chat/index.scss
@import '../../global';

.chat {
    position: absolute;
    top: 0;
    right: 0;
    width: 30%;
    height: 100%;
    backdrop-filter: blur(7px);
    background: rgba($darker, .8);

    display: flex;
    flex-direction: column;

    input {
        background: $dark;
        color: $white;
    }

    &__message {
        background: $dark;
        border-radius: .2em;
        margin: 0 0 1em 0;
        padding: 1em;

        &__nickname {
            color: $brand;
        }

        p {
            color: $white;
            word-wrap: break-word;
        }

        &--self {
            background: $brand;
            color: $white;
        }
    }

    &__container {
        flex: 1;
        padding: 1em;
        overflow: auto;

        &::-webkit-scrollbar {
            width: 7px;
        }

        &::-webkit-scrollbar-track {
            width: 7px;
            background: $dark;
        }

        &::-webkit-scrollbar-thumb {
            width: 7px;
            background: $base;
            border-radius: .2em;
        }
    }

    &__input {
        background: #000;
    }
}

